--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "moeasy-storybook",
+  "name": "@moeasy/storybook",
   "version": "0.1.0",
   "private": true,
+  "main": "src/index.ts",
   "scripts": {
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "clsx": "^2.1.1",
     "next": "14.2.4",
