--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - 'dev' # change to the branch you wish to deploy from
+      - 'main' # change to the branch you wish to deploy from
 
 permissions:
   contents: read
