--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
+    "plugins": [{ "name": "next" }, { "name": "typescript-plugin-css-modules" }],
     "paths": {
       "@/*": ["./src/*"]
     }
