--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@vanilla-extract/css": "^1.15.3",
     "@vanilla-extract/recipes": "^0.5.3",
-    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "next": "14.2.4",
     "react": "^18",
@@ -31,7 +30,6 @@
     "@storybook/nextjs": "^8.2.6",
     "@storybook/react": "^8.2.6",
     "@storybook/test": "^8.2.6",
-    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -41,7 +39,6 @@
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-unused-imports": "^3.1.0",
     "storybook": "^8.2.6",
-    "typescript": "^5",
-    "typescript-plugin-css-modules": "^5.1.0"
+    "typescript": "^5"
   }
 }
