--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vanilla-extract/webpack-plugin": "^2.3.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-unused-imports": "^3.1.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "storybook": "^8.2.6",
     "typescript": "^5"
   }
