--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@storybook/addon-interactions": "^8.2.6",
     "@storybook/addon-links": "^8.2.6",
     "@storybook/addon-onboarding": "^8.2.6",
+    "@storybook/addon-styling-webpack": "^1.0.0",
     "@storybook/blocks": "^8.2.6",
     "@storybook/nextjs": "^8.2.6",
     "@storybook/react": "^8.2.6",
@@ -34,6 +35,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vanilla-extract/webpack-plugin": "^2.3.11",
+    "css-loader": "^7.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "eslint-plugin-simple-import-sort": "^12.1.0",
@@ -41,6 +43,7 @@
     "eslint-plugin-unused-imports": "^3.1.0",
     "mini-css-extract-plugin": "^2.9.0",
     "storybook": "^8.2.6",
+    "style-loader": "^4.0.0",
     "typescript": "^5"
   }
 }
